--- a/Website/styles.css
+++ b/Website/styles.css
@@ -20,7 +20,7 @@ body {
   width: 100%;
   height: 75px;
   background: black;
-  background-image: url("https://cdn.discordapp.com/attachments/754440404891336816/1051946566065332284/trianglify-lowres.png");
+  background-image: url("Resources/bar_background.png");
   object-fit:fill;
   background-size: cover;
   background-repeat: no-repeat;
