--- a/Website/styles.css
+++ b/Website/styles.css
@@ -27,19 +27,34 @@ body {
   position: absolute;
   width: auto;
   height: auto;
-  top: 100vh;
+  top: 500vh;
 }
 
-.tetris-menu{
-  position: absolute;
-  top: 110vh;
-  width: 40%;
-  height: 90vh;
-  background: #000000;
+.barup{
+  animation-name: show-me;
+    animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+.bardown{
+  animation-name: show-me;
+    animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes bardown {
+  100% {
+    top:30%;
+  }
+}
+
+@keyframes barup {
+  100% {
+    top:-30%;
+  }
 }
 
 .bar {
-  position: relative;
+  top:0;
+  position: fixed;
   width: 100%;
   height: 75px;
   background: black;
@@ -50,7 +65,6 @@ body {
   display:flex;
   justify-content:center;
   align-items: center;
-  
 }
 
 .iconlink{
