--- a/Website/styles.css
+++ b/Website/styles.css
@@ -5,7 +5,7 @@ html, body {
 }
   
 body {
-  background: #FFFFFF
+  background: #FFFFFF;
 }
 
 .background{
@@ -57,6 +57,7 @@ body {
   position: fixed;
   width: 100%;
   height: 75px;
+  transition: top 0.5s;
   background: black;
   background-image: url("Resources/bar_background.png");
   object-fit:fill;
