--- a/Website/styles.css
+++ b/Website/styles.css
@@ -30,34 +30,11 @@ body {
   top: 500vh;
 }
 
-.barup{
-  animation-name: show-me;
-    animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-.bardown{
-  animation-name: show-me;
-    animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-@keyframes bardown {
-  100% {
-    top:30%;
-  }
-}
-
-@keyframes barup {
-  100% {
-    top:-30%;
-  }
-}
-
 .bar {
   top:0;
   position: fixed;
   width: 100%;
   height: 75px;
-  transition: top 0.5s;
   background: black;
   background-image: url("Resources/bar_background.png");
   object-fit:fill;
@@ -66,6 +43,7 @@ body {
   display:flex;
   justify-content:center;
   align-items: center;
+  transition: top 0.5s;
 }
 
 .iconlink{
@@ -90,16 +68,18 @@ body {
 }
 
 .search-bar{
+  filter: drop-shadow(0px -3px 5px #000000) drop-shadow(0px 3px 5px #000000);
   overflow: hidden;
   display:flex;
   justify-content:center;
   align-items: center;
   position:relative;
+  top: 0;
   width: 12.5%;
   height: 30%;
   background: white;
   border-radius: 25px;
-  transition: width 0.5s;
+  transition: width 0.5s, top 0.5s, filter 0.5s;
 }
 
 .search-input{
@@ -110,7 +90,7 @@ body {
   height:100%;
 }
 
-.search-bar:hover{
+/*.search-bar:hover{
   width: 20%;
   transition: width 0.5s;
 }
@@ -118,7 +98,7 @@ body {
 .search-bar:hover > .search-icon{
   opacity: 0;
   transition: opacity 0.5s;
-}
+}*/
 
 .search-icon{
   opacity: 100;
