--- a/Website/styles.css
+++ b/Website/styles.css
@@ -8,6 +8,10 @@ body {
   background: #FFFFFF;
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 .background{
   position: relative;
   display:flex;
@@ -18,8 +22,8 @@ body {
 .slide-images{
   position: absolute;
   top: 20vh;
-  width: 40%;
-  height: 50vh;
+  width: 60%;
+  height: 75vh;
   background: rgb(210, 210, 210);
 }
 
@@ -28,6 +32,19 @@ body {
   width: auto;
   height: auto;
   top: 500vh;
+}
+
+.slide-bar{
+  position:fixed;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  height:100vh;
+  width:25%;
+  top:-100%;
+  right:0;
+  transition: top 0.5s;
+  background:#333333;
 }
 
 .bar {
@@ -60,11 +77,15 @@ body {
 }
 
 .slide-button{
+  cursor: pointer;
   position: absolute;
+  filter: drop-shadow(0px -3px 5px #000000) drop-shadow(0px 3px 5px #000000);
+  rotate: 0deg;
   right:0;
   width: 5%;
   height: 40%;
   object-fit: contain;
+  transition: rotate,0.5s;
 }
 
 .search-bar{
