--- a/Website/styles.css
+++ b/Website/styles.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  zoom: 100%; /* Default zoom */
   box-sizing: border-box;
 }
   
@@ -77,7 +78,7 @@ body::-webkit-scrollbar{
 }
 
 .slide-button{
-  cursor: pointer; /*makes it so we force the curser to point*/
+  cursor: pointer; /*makes it so we change the cursor icon to pointer*/
   position: absolute;
   filter: drop-shadow(0px -3px 5px #000000) drop-shadow(0px 3px 5px #000000);
   rotate: 0deg;
@@ -85,7 +86,7 @@ body::-webkit-scrollbar{
   width: 5%;
   height: 40%;
   object-fit: contain;
-  transition: rotate,0.5s;
+  transition: rotate 0.5s;
 }
 
 .search-bar{
@@ -122,7 +123,7 @@ body::-webkit-scrollbar{
 }*/
 
 .search-icon{
-  opacity: 100;
+  opacity: 1;
   transition: opacity 0.5s;
   position: absolute;
   right:5%;
@@ -133,11 +134,11 @@ body::-webkit-scrollbar{
 .BarText{
   font-family: 'Roboto', sans-serif;
   color: #FFFFFF;
-  font-weight: 400;
+  font-weight: 400px;
 }
 
 .OtherText{
   font-family: 'Roboto', sans-serif;
   color: #000000;
-  font-weight: 400;
+  font-weight: 400px;
 }
