--- a/Website/styles.css
+++ b/Website/styles.css
@@ -142,3 +142,20 @@ body::-webkit-scrollbar{
   color: #000000;
   font-weight: 400px;
 }
+
+.p-notice{
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background:#333333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+}
+
+.p-title{
+  font-family: 'Roboto', sans-serif;
+  color: #FFFFFF;
+  font-weight: 400px;
+}
