--- a/Website/styles.css
+++ b/Website/styles.css
@@ -20,12 +20,20 @@ body::-webkit-scrollbar{
   align-items: center;
 }
 
-.slide-images{
+.slide-image-border{
   position: absolute;
-  top: 20vh;
-  width: 60%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  top: 12.5vh;
+  width: 55%;
   height: 75vh;
   background: rgb(210, 210, 210);
+}
+
+.slide-image{
+  width: 100%;
+  height: 100%;
 }
 
 .about-museum{
