--- a/Website/styles.css
+++ b/Website/styles.css
@@ -167,3 +167,30 @@ body::-webkit-scrollbar{
   color: #FFFFFF;
   font-weight: 400px;
 }
+
+.conainer{
+  width: 100%;
+  height: 100vh;
+  background: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper{
+  width: 80%;
+  height: fit-content;
+}
+
+.swiper-slide img{
+  width: 100%;
+
+}
+
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+  color: #FFFFFF;
+}
+
+.swiper .swiper-pagination-bullet-active{
+  background: #FFFFFF;
+}
