--- a/Website/styles.css
+++ b/Website/styles.css
@@ -6,7 +6,7 @@ html, body {
 }
   
 body {
-  background: #333333; 
+  background: #0A151C; 
 }
 
 body::-webkit-scrollbar{
@@ -127,8 +127,7 @@ body::-webkit-scrollbar{
   position: fixed;
   width: 100%;
   height: 65px;
-  background: #333333;
-  background-image: url("Resources/bar_background.png");
+  background: #1d262b;
   object-fit:fill;
   display:flex;
   justify-content:center;
@@ -228,7 +227,7 @@ body::-webkit-scrollbar{
   align-items: center;
   position:relative;
   top: 0;
-  width: 12.5%;
+  width: 15%;
   height: 30%;
   background: white;
   border-radius: 25px;
@@ -297,9 +296,9 @@ body::-webkit-scrollbar{
   justify-content: center;
   display: flex;
   align-items: center;
-  top: 15vh;
-  width: 70%;
-  height: 80vh;
+  top: 7.5%;
+  width: 80%;
+  height: 90vh;
 }
 
 .swiper{
