--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -59,7 +59,7 @@ body{
 
 /*Loading screen*/
 
-.loadscreen{
+#loadscreen{
     z-index: 69420;
     position: fixed;
     height: 100vh;
@@ -74,7 +74,17 @@ body{
     transition: opacity 0.5s, top 1s, background 0.5s;
 }
 
-.loadbar{
+#loadtext{
+    position: absolute;
+    font-family: "DM Sans", sans-serif;
+    font-size: 16px;
+    color: var(--tenperc);
+    bottom: 20%;
+    animation: fadeintext 1.5s 0s ease-in;
+
+}
+
+#loadbar{
     position: absolute;
     border-radius: 10px;
     bottom: 10%;
@@ -85,7 +95,7 @@ body{
     transition: background 0.5s;
 }
 
-.progress{
+#progress{
     position: absolute;
     border-radius: 10px;
     width: 0px;
@@ -94,7 +104,7 @@ body{
     transition: width 3s, background 0.5s;
 }
 
-.dots{
+#dots{
     bottom: 0;
     opacity: 1;
     position: relative;
@@ -119,17 +129,17 @@ body{
     
 }
 
-.loadscreen .dot:nth-child(1){
+#loadscreen .dot:nth-child(1){
     top: var(--dotheight);
     animation: movedot 1s 0s ease-in infinite;
 }
 
-.loadscreen .dot:nth-child(2){
+#loadscreen .dot:nth-child(2){
     top: var(--dotheight);
     animation: movedot 1s 0.33s ease-in infinite;
 }
 
-.loadscreen .dot:nth-child(3){
+#loadscreen .dot:nth-child(3){
     top: var(--dotheight);
     animation: movedot 1s 0.66s ease-in infinite;
 }
@@ -138,18 +148,18 @@ body{
 
 /*Top bar*/
 
-.topbar{
+#topbar{
     position: fixed;
     display: flex;
     z-index: 69;
     top: 0;
     background: var(--sixtyperc);
     width: 100vw;
-    height: 9%;
+    height: 8.5%;
     transition: height 0.5s, background 0.5s;
 }
 
-.topbarborder{
+#topbarborder{
     position: absolute;
     bottom: 0;
     background: linear-gradient(90deg,var(--sixtyperc),var(--tenperc),var(--sixtyperc));
@@ -158,7 +168,7 @@ body{
     transition: background 0.5s;
 }
 
-.vgm-logo{
+#vgm-logo{
     position: relative;
     top: 10%;
     height: 80%;
@@ -215,7 +225,7 @@ body{
     transition: color 0.2s;
 }
 
-.search-bar{
+#s-bar{
     overflow: hidden;
     display:flex;
     justify-content:center;
@@ -232,7 +242,7 @@ body{
     transform: translateY(-50%);
 }
   
-.search-input{
+#search-input{
     overflow: hidden;
     outline: none;
     border: none;
@@ -240,7 +250,7 @@ body{
     height:100%;
 }
   
-.search-icon{
+#s-icon{
     opacity: 1;
     position: absolute;
     right:5%;
@@ -249,7 +259,7 @@ body{
     transition: opacity 0.5s;
 }
 
-.toggletheme{
+#toggle-theme{
     cursor: pointer;
     z-index: 666;
     border-radius: 50%;
@@ -263,7 +273,7 @@ body{
     transition: background 0.5s;
 }
 
-.t-overlay{
+#t-overlay{
     position: absolute;
     border-radius: 50%;
     right: -25%;
@@ -322,7 +332,7 @@ body{
 
 /*Footer*/
 
-.BottomSection{
+#BottomSection{
     position: absolute;
     width: 100vw;
     background: var(--sixtyperc);
@@ -343,7 +353,7 @@ body{
     right: 0;
 }
 
-.BottomSecTopBar{
+#BottomSecTopBar{
     background: var(--tenperc);
     position: absolute;
     top: 0;
@@ -354,7 +364,7 @@ body{
     transition: width 0.5s, background 0.5s;
 }
 
-.pacmanarea{
+#pacmanarea{
     position: absolute;
     width: 100vw;
     height: 100%;
@@ -363,7 +373,7 @@ body{
     transition: bottom 0.75s, opacity 0.75s;
 }
 
-.pacmanobj{
+.PacmanObj{
     z-index: 42;
     position: absolute;
     bottom: 0;
@@ -374,12 +384,12 @@ body{
     width: 50px;
 }
 
-.pacman{
+#pacman{
     background-image: url(../img/Pacman.gif);
     animation: pacmananimation 10s 0s ease-in infinite;
 }
 
-.ghost{
+#ghost{
     background-image: url(../img/Clyde.gif);
     animation: pacmananimation 10s 0.66s ease-in infinite;
 }
@@ -489,6 +499,27 @@ body{
     100%{
         opacity: 1;
         bottom: 10%;
+    }
+}
+
+@keyframes fadeintext{
+    0%{
+        opacity: 0;
+        bottom: 5%;
+    }
+
+    40%{
+        opacity: 0;
+        bottom: 5%;
+    }
+
+    90%{
+        opacity: 0;
+        bottom: 5%;
+    }
+    100%{
+        opacity: 1;
+        bottom: 20%;
     }
 }
 
