--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -381,6 +381,33 @@ header{
     color: var(--thirtyperc);
 }
 
+.container{
+    position: absolute;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    top: 7.5%;
+    width: 80%;
+    height: 90vh;
+}
+  
+.swiper{
+    width: 80%;
+    height: fit-content;
+}
+  
+.swiper-slide img{
+    width: 100%;
+}
+  
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: #FFFFFF;
+}
+  
+.swiper .swiper-pagination-bullet-active{
+    background: #FFFFFF;
+}
+
 #opening-times{
     bottom: 25%;
 }
