--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -452,6 +452,12 @@ header{
     background: rgb(204, 110, 216);
 }
 
+#info-text-box-8{
+    left: 4%;
+    top: 62%;
+    background: rgb(131, 58, 226);
+}
+
 .container{
     position: relative;
     justify-content: center;
